--- a/bmiAPP/pubspec.yaml
+++ b/bmiAPP/pubspec.yaml
@@ -10,6 +10,9 @@ dependencies:
   flutter:
     sdk: flutter
 
+  font_awesome_flutter: '>= 4.7.0'
+
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
