--- a/WeathApp/pubspec.yaml
+++ b/WeathApp/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   font_awesome_flutter: '>= 4.7.0'
   geolocator: ^10.1.0
   http: ^0.13.5
+  flutter_spinkit: ^5.2.0
 
 
 dev_dependencies:
