--- a/ChatApp/pubspec.yaml
+++ b/ChatApp/pubspec.yaml
@@ -12,6 +12,9 @@ dependencies:
 
   font_awesome_flutter: '>= 4.7.0'
   animated_text_kit: ^4.2.1
+  firebase_core: ^2.8.0
+  firebase_auth: ^4.3.0
+  cloud_firestore: ^4.4.5
  
 
 
